--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -59,11 +59,13 @@ jobs:
     - name: Build container image
       uses: docker/build-push-action@v2
       with:
-        username: ${{github.actor}}
-        password: ${{secrets.GITHUB_TOKEN}}
-        registry: https://ghcr.io
-        repository: Bruno-Caquinaud/github-actions-for-packages/tic-tac-toe
-        tag_with_sha: true
-        context: .
         push: true
-        tags: user/app:latest
+        tags: user/app:lates
+        #username: ${{github.actor}}
+        #password: ${{secrets.GITHUB_TOKEN}}
+        #registry: https://ghcr.io
+        #repository: Bruno-Caquinaud/github-actions-for-packages/tic-tac-toe
+        #tag_with_sha: true
+        #context: .
+        #push: true
+        #tags: user/app:latest
