--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -60,7 +60,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: user/app:lates
+        tags: user/app:latest
         username: ${{github.actor}}
         password: ${{secrets.GITHUB_TOKEN}}
         registry: https://ghcr.io
