--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -59,13 +59,8 @@ jobs:
     - name: Build container image
       uses: docker/build-push-action@v2
       with:
-        push: true
-        tags: user/app:latest
-        secrets: |
-            GIT_AUTH_TOKEN=${{ secrets.GITHUB_TOKEN }}
-        registry: https://ghcr.io
+        username: ${{github.actor}}
+        password: ${{secrets.GITHUB_TOKEN}}
+        registry: docker.pkg.github.com
         repository: Bruno-Caquinaud/github-actions-for-packages/tic-tac-toe
         tag_with_sha: true
-        #context: .
-        #push: true
-        #tags: user/app:latest
